--- a/JavaScript_Project/project5/index.html
+++ b/JavaScript_Project/project5/index.html
@@ -46,7 +46,7 @@
       let date_input = $('#start'); // 날짜를 다 입력하지 않으면 .val 결과 "" 로 나옴
       let button_calc = $('#calculate');
 
-      button_calc.on('click',check); // 함수명에 괄호쳐도되는지..? 실험해보기
+      button_calc.on('click',check; // 함수명에 괄호쳐도되는지..? 실험해보기 => 괄호치니까 안됨!
 
       function check(){
         if(date_input.val() == ""){
