--- a/project_01/index.html
+++ b/project_01/index.html
@@ -19,7 +19,7 @@
     <a id='paris' >Paris</a>
   </div>
 
-  <img id="photo" src="images/home.jpg" width="90%">
+  <img id="photo" src="images/home.png" width="90%">
 
   <script>
 
@@ -35,7 +35,7 @@
     // 사진을 바꿔주는 함수
     function clickHome() {
       
-        $('#photo').attr("src", 'images/home.jpg');
+        $('#photo').attr("src", 'images/home.png');
         a[0].style.fontWeight = 'bold';
         a[1].style.fontWeight = 'normal';
         a[2].style.fontWeight = 'normal';
@@ -43,7 +43,7 @@
     }
 
     function clickSeoul() {
-      $('#photo').attr("src", 'images/seoul.jpg');
+      $('#photo').attr("src", 'images/seoul.png');
         $('#home').css('fontWeight','normal');
         $('#tokyo').css('fontWeight','normal');
         $('#paris').css('font-weight','normal');
@@ -55,7 +55,7 @@
     }
 
     function clickTokyo() {
-      $('#photo').attr("src", 'images/tokyo.jpg');
+      $('#photo').attr("src", 'images/tokyo.png');
         a[0].style.fontWeight = 'normal';
         a[2].style.fontWeight = 'bold';
         a[1].style.fontWeight = 'normal';
@@ -63,7 +63,7 @@
     }
     
     function clickParis() {
-      $('#photo').attr("src",'images/paris.jpg');
+      $('#photo').attr("src",'images/paris.png');
         a[0].style.fontWeight = 'normal';
         a[3].style.fontWeight = 'bold';
         a[1].style.fontWeight = 'normal';
